// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`puts stations in state 1`] = `
Object {
  "isLoading": false,
  "stations": Array [
    "station1",
    "station2",
  ],
  "trip": Object {},
}
`;

exports[`puts trip data into state 1`] = `
Object {
  "isLoading": false,
  "stations": Array [],
  "trip": Object {
    "currentLocation": "cur",
    "destination": "des",
  },
}
`;

exports[`sets loading to false 1`] = `
Object {
  "isLoading": false,
  "stations": Array [],
  "trip": Object {},
}
`;

exports[`sets loading to true 1`] = `
Object {
  "isLoading": true,
  "stations": Array [],
  "trip": Object {},
}
`;
